Fixed Overflow

--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -57,3 +57,11 @@
 	font-family: 'Ubuntu Mono', monospace;
 	text-align: center;
 }
+@media only screen and (max-width: 600px) {
+	.grid-container {
+		display: grid;
+		gap: 1rem;
+		grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+		grid-auto-rows: 25%;
+	}
+}
